# arlequin

./: CMakeLists.txt  README.md
arlequin/: ArlequinApproxSpaceCreator.cpp  ArlequinApproxSpaceCreator.h  ArlequinGeoMeshCreator.cpp  ArlequinGeoMeshCreator.h  CMakeLists.txt  GmshFileWriter.cpp  GmshFileWriter.h  TPZArlequinMatRed.cpp  TPZArlequinMatRed.h  TPZArlequinSolver.cpp  TPZArlequinSolver.h  TPZLagrangeMultiplierCSArlequin.cpp  TPZLagrangeMultiplierCSArlequin.h  TPZMatPoissonCS.cpp  TPZMatPoissonCS.h  TPZMixedDarcyFlowArlequin.cpp  TPZMixedDarcyFlowArlequin.h  TPZMultiphysicsInterfaceElArlequin.cpp  TPZMultiphysicsInterfaceElArlequin.h  arlequin_config.h
mesh/: bar.geo  bar.msh  bar2d.geo  bar2d.msh  fine.geo  fine.msh  holedplate.geo  holedplate.msh
src/: CMakeLists.txt
targets/: CMakeLists.txt  main.cpp
